# digambar-patil.github.io

./: README.md  index.html  scripts.js  styles.css
CPP/: Design patterns  DesignPatterns.md  Move_Semantics.md  SmartPointer.md  cpp.md  move_semantics.cpp  multitreading.md  notes.md  template  template.md
Cmake/: project_setup.sh
Cmake/MyProject/: CMakeLists.txt  CMakePresets.json
Cmake/MyProject/cmake/: FetchDependencies.cmake
Cmake/MyProject/include/: lib.h
Cmake/MyProject/src/: CMakeLists.txt  lib.cpp  main.cpp
Cmake/MyProject/tests/: CMakeLists.txt  test_main.cpp
IPC/: CMakeLists.txt  build.bash
IPC/fifo/: CMakeLists.txt
IPC/fifo/header/: fifo_consumer.h  fifo_producer.h
IPC/fifo/src/: fifoConsumer.c  fifoProducer.c
IPC/messgequeue/: CMakeLists.txt
IPC/messgequeue/src/: message_queue.c  msg_consumer.c  msg_producer.c
IPC/sharedmemory/: CMakeLists.txt
IPC/sharedmemory/src/: shm_consumer.c  shm_producer.c  shm_utils.c
LDD/: ldd.c
LinuxDeviceDriver/LDD/: Makefile  ldd.c  sample.py
SkillForge-Project/coding/: CMakeLists.txt  LRUCache.cpp  dqueue.cpp  memoryleakdetection.cpp  nonrepeatingcharacterstream.cpp  reverselinkedlist.cpp
SkillForge-Project/coding/vector/: CMakeLists.txt  arrayContainsDuplicate.cpp  mergeSortedArray.cpp  productExceptSelf.cpp  twosum.cpp
SkillForge-Project/cpp/: CMakeLists.txt
SkillForge-Project/cpp/src/: 1_0_threads.cpp  1_1_threadsync.cpp  1_3_promise_future.cpp  1_4_thread_exception.cpp  2_1_own_uniquepointer.cpp  2_2_own_sharedpointer.cpp  3_0_inheritance.cpp  3_2_move_semantic.cpp  3_3_casting_operator.cpp  file_handling.cpp  generic_feature.cpp  inheritance.cpp  latch_barrier_example.cpp  producer_consumer.cpp  ranges.cpp  temp.cpp  templates.cpp
SkillForge-Project/designpatterns/: CMakeLists.txt  build.sh  strategy.cpp
SkillForge-Project/iot-hub/iot-sensor-hub/: CMakeLists.txt
SkillForge-Project/linux/: CMakeLists.txt  build.sh  deadlock.cpp
SkillForge-Project/linux/ipc/: main.c
SkillForge-Project/middlewareframework/: Doxyfile
SkillForge-Project/middlewareframework/middlewareframework/: CMakeLists.txt  build.sh
SkillForge-Project/middlewareframework/middlewareframework/config/: plugins.json
SkillForge-Project/middlewareframework/middlewareframework/include/Iplugins/: IPlugin.h  ISensorPlugin.h  PluginManager.hpp
SkillForge-Project/middlewareframework/middlewareframework/include/core/: IMessageBus.hpp  Logger.hpp  messageTypes.hpp  messagebus.hpp
SkillForge-Project/middlewareframework/middlewareframework/include/core/openssl/: certificateManager.hpp  certificateUtils.hpp  tlsContext.hpp
SkillForge-Project/middlewareframework/middlewareframework/include/lin/: ILinBus.hpp  LinBusSim.hpp  LinNormalizer.hpp  LinScheduler.hpp
SkillForge-Project/middlewareframework/middlewareframework/include/lin/driver/: ILinDriver.hpp  SimLinDriver.hpp
SkillForge-Project/middlewareframework/middlewareframework/include/sensors/: ISensor.hpp  LinGatewaySensor.hpp
SkillForge-Project/middlewareframework/middlewareframework/plugins/LinGatewayPlugin/: CMakeLists.txt  LinGatewayPlugin.cpp  LinGatewayPlugin.hpp
SkillForge-Project/middlewareframework/middlewareframework/plugins/LoggingPlugin/: CMakeLists.txt  LoggingPlugin.cpp  LoggingPlugin.hpp
SkillForge-Project/middlewareframework/middlewareframework/plugins/MqttAdapterPlugin/: CMakeLists.txt  MQTTAdapter.cpp  MQTTAdapter.hpp
SkillForge-Project/middlewareframework/middlewareframework/src/: main.cpp
SkillForge-Project/middlewareframework/middlewareframework/src/core/: Logger.cpp  messagebus.cpp
SkillForge-Project/middlewareframework/middlewareframework/src/lin/: LinBusSim.cpp  LinNormalizer.cpp
SkillForge-Project/middlewareframework/middlewareframework/src/pluginManager/: PluginManager.cpp
SkillForge-Project/middlewareframework/middlewareframework/src/sensors/: LinGatewaySensor.cpp
SkillForge-Project/middlewareframework/middlewareframework/tests/: AllTests[1]_include.cmake  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
SkillForge-Project/middlewareframework/middlewareframework/tests/core_tests/: messagebus_test.cpp
digambar-portfolio/: README.md  index.html
interviewPrepProject/coding/: frequncyCount.cpp  leaderboard.cpp
interviewPrepProject/cpp/: CMakeLists.txt
interviewPrepProject/cpp/notes/: multitreading.md
interviewPrepProject/cpp/src/: generic_feature.cpp  memory_optimization.cpp  polymorphism.cpp
interviewPrepProject/designpatterns/: observer.cpp  singleton.cpp
interviewPrepProject/interviewPrepProject/: CMakeLists.txt
interviewPrepProject/interviewPrepProject/src/: lambdas.cpp  move_semantic.cpp  producer_consumer.cpp  smart_pointers.cpp  temp.cpp  threadpool.cpp  threads.cpp  threadsync.cpp
interviewPrepProject/iot-hub/iot-sensor-hub/: build.sh
interviewPrepProject/linux/: CMakeLists.txt  fork_exec_demo.cpp  racecondition.cpp
interviewPrepProject/linux/ipc/: CMakeLists.txt
interviewPrepProject/linux/ipc/fifo/: CMakeLists.txt
interviewPrepProject/linux/ipc/fifo/header/: fifo.h
interviewPrepProject/linux/ipc/fifo/src/: fifo.c
interviewPrepProject/linux/ipc/messgequeue/: CMakeLists.txt
interviewPrepProject/linux/ipc/messgequeue/header/: message_queue.h
interviewPrepProject/linux/ipc/sharedmemory/header/: shm_utils.h
interviewPrepProject/linux/ipc/sharedmemory/src/: shm_utils.c
iot-hub/iot-sensor-hub/: CMakeLists.txt  Doxyfile
iot-hub/iot-sensor-hub/include/adapters/: HTTPAdapter.hpp  MQTTAdapter.hpp
iot-hub/iot-sensor-hub/include/lin/: LinBusSim.hpp  LinNormalizer.hpp
iot-hub/iot-sensor-hub/include/lin/driver/: SimLinDriver.hpp
iot-hub/iot-sensor-hub/include/plugins/: IPlugin.hpp
iot-hub/iot-sensor-hub/include/sensors/: ISensor.hpp
iot-hub/iot-sensor-hub/src/adapters/: MQTTAdapter.cpp
iot-hub/iot-sensor-hub/src/lin/: LinNormalizer.cpp
iot-hub/iot-sensor-hub/src/logger/: Logger.cpp
iot-hub/iot-sensor-hub/src/plugins/: filesinkplugin.cpp
iot-hub/iot-sensor-hub/src/sensors/: LinGatewaySensor.cpp  dht22sensor.cpp
(+764 files in other folders)
