cmake_minimum_required(VERSION 3.10)
project(C++ LANGUAGES CXX)

# Use modern C++
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")


# Executables (one per file with main)
add_executable(threadsync  src/threadsync.cpp)


